# ctru-rt

./: Cargo.toml  Makefile.toml  arm-nintendo-ctr-elf.json  armv6k-nintendo-horizon_ctr-elf.json  build.rs  link.x  rsrt0.S  rust-toolchain.toml  svc.S
.cargo/: config  config.toml
ctru-rt-macros/: Cargo.toml  armv6k-nintendo-horizon_ctr-elf.json
ctru-rt-macros/src/: entry.rs  enum_cast.rs  ipc_call.rs  lib.rs  svc_spec.rs
examples/: cfg.rs  errf.rs  gsp.rs  hello_world.rs  hid.rs  service.rs  soc.rs  threads.rs
src/: debug.rs  env.rs  heap.rs  lib.rs  os.rs  result.rs  svc.rs  sync.rs  thread.rs  tls.rs
src/graphics/: mod.rs
src/ipc/: mod.rs  reply.rs  request.rs
src/os/: cfgmem.rs  mem.rs  mod.rs  reslimit.rs  sharedmem.rs
src/ports/: errf.rs  mod.rs  srv.rs
src/services/: ac.rs  apt.rs  cfg.rs  mod.rs  soc.rs  srv.rs
src/services/gsp/: gpu.rs  mod.rs
src/services/hid/: mod.rs
