[package]
name = "ctru-rt"
version = "0.1.0"
authors = ["Philipp Joram <mail@phijor.me>"]
edition = "2018"
links = "ctru-rt"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
ctru-rt-macros = { path = "ctru-rt-macros" }
r0 = "1"
linked_list_allocator = "0.9"
volatile = "0.2"
log = { version = "0.4", default-features = false }
lock_api = "0.4.2"
spin = "0.7.1"
# thiserror = "1.0.23"

[lib]
test = false
bench = false
