[package]
name = "ctru-rt-macros"
version = "0.1.0"
authors = ["Philipp Joram <mail@phijor.me>"]
edition = "2021"

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
itertools = "0.10"

[dev-dependencies]
assert_matches = "1.5.0"
syn = { version = "1", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
test = true
